# ZMesh

./: DistributedMessageSystem.sln  LICENSE  Minx.ZMesh.sln  README.md  pack.nuspec  vcpkg.json
DistributedMessageSystem/: AnswerMessage.cs  AnswerMessageWithIdenity.cs  DistributedMessageSystem.csproj  DistributedMessanger.csproj  IPendingAnswer.cs  IPendingQuestion.cs  Message.cs  MessageBox.cs  MessageBoxProcessor.cs  MessageReceivedEventArgs.cs  MessageSystem.cs  MessageType.cs  PendingAnswers.cs  PendingQuestion.cs  QuestionMessage.cs  QuestionReceivedEventArgs.cs  SystemMap.cs  TellMessage.cs  TypeResolver.cs  ZMesh.cs
Minx.ZMesh/: AbstractMessageBox.cs  Answer.cs  AnswerMessage.cs  AnswerMessageWithIdenity.cs  IAbstractMessageBox.cs  IMessageBox.cs  IMessageBoxProcessor.cs  IPendingAnswer.cs  IPendingQuestion.cs  ITypedMessageBox.cs  IZMesh.cs  IdentityMessage.cs  Message.cs  MessageBox.cs  MessageBoxProcessor.cs  MessageProcessingOptions.cs  ZMesh.cs  (+12 more)
Minx.ZMesh.Cpp/: Minx.ZMesh.Cpp.vcxproj  Minx.ZMesh.Cpp.vcxproj.filters  vcpkg.json
Minx.ZMesh.Cpp.Example/: Minx.ZMesh.Cpp.Example.vcxproj
Minx.ZMesh.Cpp.Sample/: Minx.ZMesh.Cpp.Sample.vcxproj  Minx.ZMesh.Cpp.Sample.vcxproj.filters
Minx.ZMesh.Example/: Program.cs
Minx.ZMesh.Native/: Minx.ZMesh.Native.vcxproj  Minx.ZMesh.Native.vcxproj.filters  vcpkg.json
Minx.ZMesh.Native.Example/: Minx.ZMesh.Native.Example.vcxproj  Minx.ZMesh.Native.Example.vcxproj.filters
Minx.ZMesh.Probe/: Minx.ZMesh.Probe.csproj  NamedArguments.cs  Program.cs
zmesh-cpp/: CMakeLists.txt  README.md  ZMeshCpp.sln  build.sh  zmesh-cpp.vcxproj  zmesh-cpp.vcxproj.filters
zmesh-cpp/examples/: CMakeLists.txt  calculator.cpp  calculator.vcxproj  calculator.vcxproj.filters
zmesh-cpp/include/zmesh/: answer.hpp  json_serializer.hpp  message_box.hpp  message_type.hpp  messages.hpp  pending_question.hpp  typed_message_box.hpp  zmesh.hpp
zmesh-cpp/src/: message_box.cpp  messages.cpp  zmesh.cpp
(+71 files in other folders)
